--- a/app/src/main/res/layout/activity_map2.xml
+++ b/app/src/main/res/layout/activity_map2.xml
@@ -31,6 +31,21 @@
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_50" />
 
+    <TextView
+        android:id="@+id/textView_50"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="56dp"
+        android:layout_marginBottom="99dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="50주년\n기념관"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     // 기독교교육관
     <ImageButton
         android:id="@+id/imageButtonKidok_2"
@@ -47,6 +62,21 @@
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_kidok" />
 
+    <TextView
+        android:id="@+id/textView_kidok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="145dp"
+        android:layout_marginBottom="187dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="기독교\n교육관"
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     // 인문사회관
     <ImageButton
         android:id="@+id/imageButtonInsa_2"
@@ -62,6 +92,21 @@
         android:background="#00ffffff"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_insa" />
+
+    <TextView
+        android:id="@+id/textView_insa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="277dp"
+        android:layout_marginBottom="216dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="인문\n사회관"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     // 중앙도서관
     <ImageButton
@@ -80,6 +125,21 @@
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_library" />
 
+    <TextView
+        android:id="@+id/textView_library"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="219dp"
+        android:layout_marginBottom="318dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="중앙\n도서관"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     // 학생누리관
     <ImageButton
         android:id="@+id/imageButtonNuri_2"
@@ -96,6 +156,21 @@
         android:background="#00ffffff"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_nuri" />
+
+    <TextView
+        android:id="@+id/textView_nuri"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="275dp"
+        android:layout_marginBottom="357dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="학생\n누리관"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     // 조형예술관
     <ImageButton
@@ -114,6 +189,21 @@
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_joye" />
 
+    <TextView
+        android:id="@+id/textView_joye"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="348dp"
+        android:layout_marginBottom="319dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="조형\n예술관"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     // 제2과학관
     <ImageButton
         android:id="@+id/imageButtonSci2_2"
@@ -130,6 +220,21 @@
         android:background="#00ffffff"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_science2" />
+
+    <TextView
+        android:id="@+id/textView_science2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="342dp"
+        android:layout_marginBottom="400dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="제2\n과학관"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     // 제1과학관
     <ImageButton
@@ -150,6 +255,21 @@
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_science1" />
 
+    <TextView
+        android:id="@+id/textView_science1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="295dp"
+        android:layout_marginBottom="479dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="제1\n과학관"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     // 샬롬기숙사
     <ImageButton
         android:id="@+id/imageButtonShalom_2"
@@ -168,6 +288,21 @@
         android:background="#00ffffff"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_shalom" />
+
+    <TextView
+        android:id="@+id/textView_Shalom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="166dp"
+        android:layout_marginBottom="490dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="샬롬\n기숙사"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     // 국제생활관
     <ImageButton
@@ -188,6 +323,21 @@
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_international" />
 
+    <TextView
+        android:id="@+id/textView_Itn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="64dp"
+        android:layout_marginBottom="478dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="국제\n생활관"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     // 대강당
     <ImageButton
         android:id="@+id/imageButtonTgd_2"
@@ -206,5 +356,19 @@
         android:background="#00ffffff"
         android:scaleType="fitStart"
         app:srcCompat="@drawable/map_tgangdang" />
+
+    <TextView
+        android:id="@+id/textView_Tgd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="76dp"
+        android:layout_marginBottom="321dp"
+        android:fontFamily="@font/cafe24surround"
+        android:text="대강당"
+        android:textColor="@color/black"
+        android:textSize="13sp"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </RelativeLayout>
