--- a/app/src/main/res/layout/chegodang_menu.xml
+++ b/app/src/main/res/layout/chegodang_menu.xml
@@ -44,7 +44,7 @@
         android:layout_width="151dp"
         android:layout_height="48dp"
         android:layout_marginStart="20dp"
-        android:text="냉모밀\n"
+        android:text="냉모밀\n4000원"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chegotext8" />
 
@@ -97,7 +97,6 @@
         android:layout_height="44dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
-        android:text="최고당돈가스"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
