맵 텍스트 추가

--- a/app/src/main/res/layout/gaeun_menu.xml
+++ b/app/src/main/res/layout/gaeun_menu.xml
@@ -11,6 +11,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/font_text"
         android:text="에스프레소\nHOT 1.9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gaeun_coffee" />
@@ -20,6 +21,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="아메리카노\nHOT 1.9/ICE 2.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee1" />
@@ -29,6 +31,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="카페라떼\nHOT 2.4/ICE 2.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee2" />
@@ -38,6 +41,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="카푸치노\nHOT:2.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee3" />
@@ -47,6 +51,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="바닐라라떼\nHOT 2.9/ICE 3.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee4" />
@@ -56,6 +61,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="카라멜마끼아또\nHOT 3.1/ICE 3.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee5" />
@@ -65,6 +71,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="카페모카\nHOT 3.1/ICE 3.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee6" />
@@ -74,6 +81,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="화이트모카\nHOT 2.9/ICE 3.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee7" />
@@ -83,6 +91,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="연유라떼\nHOT 3.1/ICE 3.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee8" />
@@ -92,6 +101,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="아이리쉬라떼\nHOT 2.9/ICE 3.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee9" />
@@ -103,13 +113,15 @@
         android:layout_marginStart="3dp"
         android:text="아포카토\nICE 3.1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/coffee10" />
+        app:layout_constraintTop_toBottomOf="@+id/coffee10"
+        android:fontFamily="@font/font_text" />
 
     <TextView
         android:id="@+id/coffee12"
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="토피넛라떼\nHOT 2.9/ICE 3.3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee11" />
@@ -119,6 +131,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginStart="3dp"
+        android:fontFamily="@font/font_text"
         android:text="토피넛모카\nHOT 3.1/ICE 3.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/coffee12" />
@@ -129,6 +142,7 @@
         android:layout_height="32dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/font_text"
         android:text="커피"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,6 +154,7 @@
         android:layout_height="30dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/font_text"
         android:text="음료"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@+id/gaeun_coffee"
@@ -151,6 +166,7 @@
         android:layout_height="30dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/font_text"
         android:text="티"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@+id/gaeun_bev"
@@ -162,6 +178,7 @@
         android:layout_height="30dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="308dp"
+        android:fontFamily="@font/font_text"
         android:text="기타"
         android:textAlignment="center"
         app:layout_constraintStart_toEndOf="@+id/gaeun_bev"
@@ -172,6 +189,7 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/font_text"
         android:text="녹차라떼\nHOT 2.4/ICE 2.6"
         app:layout_constraintStart_toEndOf="@+id/coffee1"
         app:layout_constraintTop_toBottomOf="@+id/gaeun_coffee" />
@@ -180,6 +198,7 @@
         android:id="@+id/bev2"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="홍차라뗴\nHOT 2.4/ICE 2.6"
         app:layout_constraintStart_toEndOf="@+id/coffee2"
         app:layout_constraintTop_toBottomOf="@+id/bev1" />
@@ -188,6 +207,7 @@
         android:id="@+id/bev3"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="고구마라떼\nHOT 2.4/ICE 2.6"
         app:layout_constraintStart_toEndOf="@+id/coffee3"
         app:layout_constraintTop_toBottomOf="@+id/coffee2" />
@@ -196,6 +216,7 @@
         android:id="@+id/bev4"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="초코라떼\nHOT:2.4/ICE 3.1"
         app:layout_constraintStart_toEndOf="@+id/coffee4"
         app:layout_constraintTop_toBottomOf="@+id/coffee3" />
@@ -204,6 +225,7 @@
         android:id="@+id/bev5"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="민트초코라떼\nHOT 2.9/ICE 3.6"
         app:layout_constraintStart_toEndOf="@+id/coffee5"
         app:layout_constraintTop_toBottomOf="@+id/coffee4" />
@@ -212,6 +234,7 @@
         android:id="@+id/bev6"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="화이트민트초코라떼\nHOT 2.9/ICE 3.6"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/coffee6"
@@ -221,6 +244,7 @@
         android:id="@+id/bev7"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="오곡라떼\nHOT 2.7/ICE 2.9"
         app:layout_constraintStart_toEndOf="@+id/coffee7"
         app:layout_constraintTop_toBottomOf="@+id/coffee6" />
@@ -229,6 +253,7 @@
         android:id="@+id/bev8"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="아이스티(복숭아/석류)\nICE 1.9"
         android:textSize="11sp"
         app:layout_constraintStart_toEndOf="@+id/coffee8"
@@ -238,6 +263,7 @@
         android:id="@+id/bev9"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="딸기연유라떼\nS 3.1 M 3.6 L 4.0"
         app:layout_constraintStart_toEndOf="@+id/coffee9"
         app:layout_constraintTop_toBottomOf="@+id/coffee8" />
@@ -246,6 +272,7 @@
         android:id="@+id/bev10"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="에이드(레몬,자몽,유자,청포도,오렌지,천혜향,망고)\nICE 3.0"
         android:textSize="9sp"
         app:layout_constraintStart_toEndOf="@+id/coffee10"
@@ -255,6 +282,7 @@
         android:id="@+id/bev11"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="과일라떼(블루베리,딸기)\nHOT 2.4/ICE 2.6"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/coffee11"
@@ -264,6 +292,7 @@
         android:id="@+id/bev12"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="스무디(플레인,딸기,블루베리,유자,망고,천혜향)\nICE 4.1"
         android:textSize="9sp"
         app:layout_constraintStart_toEndOf="@+id/coffee12"
@@ -274,6 +303,7 @@
         android:layout_width="110dp"
         android:layout_height="65dp"
         android:layout_marginTop="12dp"
+        android:fontFamily="@font/font_text"
         android:text="허브티(캐모마일,페퍼민트,레몬글라스,얼그레이,잉글리쉬 브렉퍼스트,히비스커스)\nHOT 1.9/ICE 2.0"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/bev1"
@@ -283,6 +313,7 @@
         android:id="@+id/tea2"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="천혜향차\nHOT 2.3/ICE 2.5"
         app:layout_constraintStart_toEndOf="@+id/bev2"
         app:layout_constraintTop_toBottomOf="@+id/tea1" />
@@ -291,6 +322,7 @@
         android:id="@+id/tea3"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="유자차\nHOT 2.3/ICE 2.5"
         app:layout_constraintStart_toEndOf="@+id/bev3"
         app:layout_constraintTop_toBottomOf="@+id/tea2" />
@@ -299,6 +331,7 @@
         android:id="@+id/tea4"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="레몬차\nHOT:2.3/ICE 2.5"
         app:layout_constraintStart_toEndOf="@+id/bev4"
         app:layout_constraintTop_toBottomOf="@+id/tea3" />
@@ -307,6 +340,7 @@
         android:id="@+id/tea5"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="자몽차\nHOT 2.3/ICE 2.5"
         app:layout_constraintStart_toEndOf="@+id/bev5"
         app:layout_constraintTop_toBottomOf="@+id/tea4" />
@@ -315,6 +349,7 @@
         android:id="@+id/tea6"
         android:layout_width="110dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="생강차\nHOT 2.3/ICE 2.5"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/bev6"
@@ -325,6 +360,7 @@
         android:layout_width="120dp"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/font_text"
         android:text="젤라또\n2.0"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/bev1"
@@ -334,6 +370,7 @@
         android:id="@+id/ect2"
         android:layout_width="120dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="쿠키(호두,초코,오트밀)\n1.2"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/bev2"
@@ -343,6 +380,7 @@
         android:id="@+id/ect3"
         android:layout_width="120dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="병음료(자몽,라임) : 3.5\n애플주스 2.5 / 스파클링 2.6"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@+id/bev3"
@@ -352,6 +390,7 @@
         android:id="@+id/ect4"
         android:layout_width="120dp"
         android:layout_height="35dp"
+        android:fontFamily="@font/font_text"
         android:text="GAEUN 블렌딩 원두\n100G 4.5 1KG 23.0"
         app:layout_constraintStart_toEndOf="@+id/bev4"
         app:layout_constraintTop_toBottomOf="@+id/ect3" />
@@ -360,11 +399,12 @@
         android:id="@+id/gaeun_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/font_text"
         android:text="샷,휘핑,얼음컵 : 0.5 / 사이즈업 : 0.9\n시럽추가 : 0.5"
         android:textSize="12sp"
-        tools:layout_editor_absoluteX="215dp"
-        tools:layout_editor_absoluteY="553dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="197dp"
+        tools:layout_editor_absoluteY="557dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
