--- a/app/src/main/res/layout/activity_map2.xml
+++ b/app/src/main/res/layout/activity_map2.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#799E58">
 
-    // 학교공간 메뉴 캠퍼스맵 배경
+<!--    학교공간 메뉴 캠퍼스맵 배경-->
     <ImageView
         android:id="@+id/imageViewCampus_2"
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
         android:layout_weight="1"
         app:srcCompat="@drawable/minimap_campus" />
 
-    // 50주년 기념관
+<!--    50주년 기념관-->
     <ImageButton
         android:id="@+id/imageButton50_2"
         android:layout_width="wrap_content"
@@ -27,9 +27,8 @@
         android:layout_marginEnd="254dp"
         android:layout_marginBottom="78dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_50" />
+        android:background="@drawable/button_clicked_50"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_50"
@@ -46,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 기독교교육관
+<!--    기독교교육관-->
     <ImageButton
         android:id="@+id/imageButtonKidok_2"
         android:layout_width="69dp"
@@ -58,9 +57,8 @@
         android:layout_marginEnd="216dp"
         android:layout_marginBottom="174dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_kidok" />
+        android:background="@drawable/button_clicked_kidok"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_kidok"
@@ -77,7 +75,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 인문사회관
+<!--    인문사회관-->
     <ImageButton
         android:id="@+id/imageButtonInsa_2"
         android:layout_width="100dp"
@@ -89,9 +87,8 @@
         android:layout_marginEnd="60dp"
         android:layout_marginBottom="204dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_insa" />
+        android:background="@drawable/button_clicked_insa"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_insa"
@@ -108,7 +105,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 중앙도서관
+<!--    중앙도서관-->
     <ImageButton
         android:id="@+id/imageButtonLibrary_2"
         android:layout_width="wrap_content"
@@ -121,9 +118,8 @@
         android:layout_marginEnd="124dp"
         android:layout_marginBottom="306dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_library" />
+        android:background="@drawable/button_clicked_library"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_library"
@@ -140,7 +136,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 학생누리관
+<!--    학생누리관-->
     <ImageButton
         android:id="@+id/imageButtonNuri_2"
         android:layout_width="77dp"
@@ -153,9 +149,8 @@
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="343dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_nuri" />
+        android:background="@drawable/button_clicked_nuri"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_nuri"
@@ -172,7 +167,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 조형예술관
+<!--    조형예술관-->
     <ImageButton
         android:id="@+id/imageButtonJoye_2"
         android:layout_width="wrap_content"
@@ -185,9 +180,8 @@
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="295dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_joye" />
+        android:background="@drawable/button_clicked_joye"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_joye"
@@ -204,7 +198,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 제2과학관
+<!--    제2과학관-->
     <ImageButton
         android:id="@+id/imageButtonSci2_2"
         android:layout_width="87dp"
@@ -217,9 +211,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="374dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_science2" />
+        android:background="@drawable/button_clicked_sci2"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_science2"
@@ -236,7 +229,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 제1과학관
+<!--    제1과학관-->
     <ImageButton
         android:id="@+id/imageButtonSci1_2"
         android:layout_width="117dp"
@@ -251,9 +244,8 @@
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="441dp"
         android:layout_weight="1"
-        android:background="#00ffffff"
-        android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_science1" />
+        android:background="@drawable/button_clicked_sci1"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/textView_science1"
@@ -270,7 +262,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 샬롬기숙사
+<!--    샬롬기숙사-->
     <ImageButton
         android:id="@+id/imageButtonShalom_2"
         android:layout_width="139dp"
@@ -287,7 +279,7 @@
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_shalom" />
+        app:srcCompat="@drawable/map_shalom_unclick" />
 
     <TextView
         android:id="@+id/textView_Shalom"
@@ -299,12 +291,12 @@
         android:layout_marginBottom="490dp"
         android:fontFamily="@font/cafe24surround"
         android:text="샬롬\n기숙사"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 국제생활관
+<!--    국제생활관-->
     <ImageButton
         android:id="@+id/imageButtonItn_2"
         android:layout_width="wrap_content"
@@ -321,7 +313,7 @@
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_international" />
+        app:srcCompat="@drawable/map_international_unclick" />
 
     <TextView
         android:id="@+id/textView_Itn"
@@ -333,12 +325,12 @@
         android:layout_marginBottom="478dp"
         android:fontFamily="@font/cafe24surround"
         android:text="국제\n생활관"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent" />
 
 
-    // 대강당
+<!--    대강당-->
     <ImageButton
         android:id="@+id/imageButtonTgd_2"
         android:layout_width="123dp"
@@ -355,7 +347,7 @@
         android:layout_weight="1"
         android:background="#00ffffff"
         android:scaleType="fitStart"
-        app:srcCompat="@drawable/map_tgangdang" />
+        app:srcCompat="@drawable/map_tgangdang_unclick" />
 
     <TextView
         android:id="@+id/textView_Tgd"
@@ -367,7 +359,7 @@
         android:layout_marginBottom="321dp"
         android:fontFamily="@font/cafe24surround"
         android:text="대강당"
-        android:textColor="@color/black"
+        android:textColor="@color/gray"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="parent" />
 
